--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         <input type="text" @keyup="imprimirTexto">
         <button @click="mensagemAlerta">Botão</button><br>
         <hr>
+        <!--Hands on : praticando com o data,methods,templates string , v-bind , v-on-->
         <div class="borda div-principal" :class="cor">
             Cor: {{cor}}
             <br>
@@ -78,8 +79,23 @@
         <hr>
         <div @click="mudarCor('verde')" class="borda div-comum"></div>
         <div class="borda div-comum" @mouseover="mudarCor('azul')"  @mouseout="mudarCor('vermelha')"></div>
-        <div class="borda div-comum" @mousemove="coordenadas($event)"></div>
-
+        <div class="borda div-comum" @mousemove="coordenadas($event)"></div> <br>
+        <hr>
+        <!--Diretiva V-on Implementando modificadores-->
+        <a href="https://www.google.com.br" target="_blank" v-on:click="prevenirComportamentoPadrao()">Link</a><br>
+        Mensagem: {{msg}}
+        <hr>
+        <button @click.once="executarUmaVez()">Botão</button>
+        <p>Cliques: {{cliques}}</p>
+        <hr>
+        <form @submit.prevent.once="prevenirUmaVez()">
+            <button type="submit">Enviar</button>
+        </form>
+        <p>Formulário: {{formulario}}</p>
+        <hr>
+        <input type="text" @keyup.Shift.Enter="capturandoTeclas($event)">
+        <p>Teclas:{{teclas}}</p>
+        
     </div>
 
     <script>
@@ -105,7 +121,11 @@
                 teste: true,
                 cor:'branco',
                 posicaoX:0,
-                posicaoY:0
+                posicaoY:0,
+                msg:'',
+                cliques: 0,
+                formulario: '',
+                teclas:''
             },
             methods: {
                 somar: function somar(){
@@ -132,12 +152,24 @@
                 mensagemAlerta(){
                     alert('Mensagem de alerta');
                 },
-                mudarCor(c) {
+                mudarCor(c){
                     this.cor=c
                 },
-                coordenadas(e) {
+                coordenadas(e){
                     this.posicaoX=e.clientX
                     this.posicaoY=e.clientY
+                },
+                prevenirComportamentoPadrao(){
+                    this.msg='Comportamento padrão ativado'
+                },
+                executarUmaVez(){
+                    this.cliques++
+                },
+                prevenirUmaVez(){
+                    this.formulario='Prevenindo o comportamento padrão'
+                },
+                capturandoTeclas(event){
+                    this.teclas='Modificadores encadeados com sucesso!'
                 }
             }
         })
