--- a/index.html
+++ b/index.html
@@ -95,6 +95,18 @@
         <hr>
         <input type="text" @keyup.Shift.Enter="capturandoTeclas($event)">
         <p>Teclas:{{teclas}}</p>
+        <hr>
+        <!--Selecionando elemento HTML e suas propriedades por ID-->
+        <input type="text"  id="inputTexto"> <br>
+        <select id="opcoes">
+            <option value="A">Opção 1</option>
+            <option value="B">Opção 2</option>
+            <option value="C">Opção 3</option>
+        </select>
+        <br>
+        <p id="paragrafo" style="color:green" >Parágrafo</p><br>
+        <div id="bloco">Conteudo interno da div</div>
+        <button @click="selecionandoElementoFilho()" >Botão</button>
         
     </div>
 
@@ -170,6 +182,12 @@
                 },
                 capturandoTeclas(event){
                     this.teclas='Modificadores encadeados com sucesso!'
+                },
+                selecionandoElementoFilho(){
+                    ///console.log(inputTexto.value)
+                    //console.log(opcoes.value)
+                    //console.log(paragrafo.style.color)
+                    console.log(bloco.innerHTML)
                 }
             }
         })
