--- a/index.html
+++ b/index.html
@@ -119,12 +119,20 @@
         <p v-if="idade < 18">Menor de idade</p>
         <p v-else>Maior de idade</p><br>
         <hr>
+        <!-- V-if / V-else-if -->
         Nota: <input type="text" id="inputNota" @blur="setNota()">
         <p v-if="nota == ''" >Digite a nota do aluno</p>
         <p v-else-if="nota >= 7 && nota <=10" >Aluno aprovado</p>
         <p v-else-if="nota >= 5 && nota <7" >Aluno em recuperação</p>
         <p v-else-if="nota >= 0 && nota <5" >Aluno reprovado</p>
-        <p v-else >A nota informada é inválida</p>
+        <p v-else >A nota informada é inválida</p><br>
+        <hr>
+        <!--Diretiva V-show-->
+        <p @mouseover="exibirTextoAjuda = true" @mouseout="exibirTextoAjuda = false">Exemplo de tooltip</p>
+        <div v-show="exibirTextoAjuda">
+            <h3>Texto ajuda</h3>
+            <p>Conteudo texto ajuda</p>
+        </div>
 
 
         
@@ -161,7 +169,8 @@
                 saldo:4570.17,
                 exibirSaldo:false,
                 idade:0,
-                nota: 0
+                nota: 0,
+                exibirTextoAjuda: false
             },
             methods: {
                 somar: function somar(){
