--- a/index.html
+++ b/index.html
@@ -175,7 +175,14 @@
                 </div>
             </li>
         </ul>
-        <button @click="misturarArray()"> Misturar publicações</button>
+        <button @click="misturarArray()"> Misturar publicações</button><br>
+        <hr>
+        <ul>
+            <li v-for="c in comentarios" >{{c.id}} - {{c.comentario}}</li>
+        </ul>
+        <button @click="adicionarElemento()">Adicionar</button>
+        <button @click="removerElemento()">Remover</button>
+        <button @click="modificarElemento()">Atualizar</button>
 
         
     </div>
@@ -230,6 +237,11 @@
                         {id:1, publicacao:'Publicação 1'},
                         {id:2, publicacao:'Publicações 2'},
                         {id:3, publicacao:'Publicações 3'}
+                    ],
+                    comentarios: [
+                        {id:1, comentario: 'Comentário 1'},
+                        {id:2, comentario: 'Comentário 2'},
+                        {id:3, comentario: 'Comentário 3'}
                     ]
             },
             methods: {
@@ -302,6 +314,17 @@
                     misturado[2]=this.publicacoes[1]
 
                     this.publicacoes = misturado
+                },
+                adicionarElemento(){
+                    this.comentarios.push({id: 4, comentario:'Novo comentário'})
+                },
+                removerElemento(){
+                    this.comentarios.pop()
+                },
+                modificarElemento(){
+                    this.$set(
+                        this.comentarios,1,{id: 2, comentario:'Comentário 2 atualizado'}
+                    )
                 }
             }
         })
